--- a/2. Preliminaries/2.2/2-2-data-preprocessing.sync.ipynb
+++ b/2. Preliminaries/2.2/2-2-data-preprocessing.sync.ipynb
@@ -720,7 +720,7 @@
    "metadata": {},
    "source": [
     "## Exercise 4\n",
-    "- Too many categories? Try to reduce them. If you can't, considering turn them into quantitative measures (map to numbers).\n",
+    "- Too many categories? Try to reduce them. If you can't, considering turn them into quantitative measures (map to numbers). You can also try **target-rate-encoding** (it has many names but I like that one) or just bunch the less common categories into an OTHER category.\n",
     "- If category labels are all unique, try to group them into meaningful groups (has some correlation with the target value). If you still can't (or there isn't any correlation to be found), just drop the column. (every rows has its own value, won't contribute anything)."
    ]
   },
